fixed some minor spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -58,7 +58,6 @@ html, body {
 
 h1, h2, h3, h4, h5 {
     font-size: 18px;
-    margin-bottom: 15px;
     font-family: 'Rubik', sans-serif;
 }
 
@@ -71,8 +70,8 @@ nav {
     width: 100%;
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
-	flex-wrap: wrap;
+	align-items: baseline;
+    flex-wrap: wrap;
 }
 
 nav a {
@@ -87,6 +86,7 @@ nav a {
 
 .topimg {
     margin: 20px auto;
+    width: 100%;
 }
 
 p {
@@ -95,7 +95,7 @@ p {
 
 .container {
     width: 800px;
-    margin: 20px auto;
+    margin: 20px auto 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -211,7 +211,6 @@ footer nav a {
 
 .about-page header {
     border-bottom: 1px dashed black;
-    margin: 20px;
 }
 
 .bod {
